Remove out deprecated call to newInstance().